--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,8 +47,8 @@ jobs:
           echo "Building for ${{ matrix.os }}-${{ matrix.arch }}"
           go build -ldflags="-s -w" -o caddy-manager${{ matrix.ext }} .
           echo "Creating archive for ${{ matrix.os }}-${{ matrix.arch }}"
-          tar -czf caddy-manager-${{ matrix.os }}-${{ matrix.arch }}.tar.gz caddy-manager${{ matrix.ext }} README.md env.example SUDO_SETUP.md
-          zip caddy-manager-${{ matrix.os }}-${{ matrix.arch }}.zip caddy-manager${{ matrix.ext }} README.md env.example SUDO_SETUP.md
+          tar -czf caddy-manager-${{ matrix.os }}-${{ matrix.arch }}.tar.gz caddy-manager${{ matrix.ext }} README.md env.example SUDO_SETUP.md Makefile.release
+          zip caddy-manager-${{ matrix.os }}-${{ matrix.arch }}.zip caddy-manager${{ matrix.ext }} README.md env.example SUDO_SETUP.md Makefile.release
           ls -la *.tar.gz *.zip
 
       - name: Upload artifacts
