--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,14 +72,16 @@ jobs:
       - name: List downloaded files
         run: |
           find . -name "*.tar.gz" -o -name "*.zip" | sort
+          ls -la
+          ls -la */ 2>/dev/null || echo "No subdirectories"
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            *.tar.gz
-            *.zip
+            **/*.tar.gz
+            **/*.zip
           draft: false
           prerelease: false
           generate_release_notes: true
